# port_webp

./: .gitignore  CMakeLists.txt  README  _nord_webp.vcxproj  _nord_webp.vcxproj.filters  deployment.rc  nord_webp.vcxproj  port_webp.vcxproj  webp.vcxproj
include/port_webp/dsp/: dsp.h
include/port_webp/utils/: bit_reader_inl.h  thread.h
src/: nord_jpeg.vcxproj  nord_jpeg.vcxproj.filters
src/dec/: dec.alpha.c  dec.buffer.c  dec.frame.c  dec.idec.c  dec.io.c  dec.quant.c  dec.tree.c  dec.vp8.c  dec.vp8l.c  dec.webp.c
src/demux/: demux.demux.c
src/dsp/: dsp.alpha_processing.c  dsp.alpha_processing_mips_dsp_r2.c  dsp.alpha_processing_sse2.c  dsp.argb.c  dsp.argb_mips_dsp_r2.c  dsp.argb_sse2.c  dsp.cost.c  dsp.cost_mips32.c  dsp.cost_mips_dsp_r2.c  dsp.cost_sse2.c  dsp.cpu.c  dsp.dec.c  dsp.dec_clip_tables.c  dsp.dec_mips32.c  dsp.dec_mips_dsp_r2.c  dsp.dec_neon.c  dsp.dec_sse2.c  dsp.enc.c  dsp.enc_avx2.c  dsp.enc_mips32.c  dsp.enc_mips_dsp_r2.c  dsp.enc_neon.c  dsp.enc_sse2.c  dsp.filters.c  dsp.filters_mips_dsp_r2.c  dsp.filters_sse2.c  dsp.h  dsp.lossless.c  dsp.lossless_mips32.c  dsp.lossless_mips_dsp_r2.c  dsp.lossless_neon.c  dsp.lossless_sse2.c  dsp.rescaler.c  dsp.rescaler_mips32.c  dsp.rescaler_mips_dsp_r2.c  dsp.upsampling.c  dsp.upsampling_mips_dsp_r2.c  dsp.upsampling_neon.c  dsp.upsampling_sse2.c  dsp.yuv.c  (+4 more)
src/enc/: enc.alpha.c  enc.analysis.c  enc.backward_references.c  enc.config.c  enc.cost.c  enc.filter.c  enc.frame.c  enc.histogram.c  enc.iterator.c  enc.near_lossless.c  enc.picture.c  enc.picture_csp.c  enc.picture_psnr.c  enc.picture_rescale.c  enc.picture_tools.c  enc.quant.c  enc.syntax.c  enc.token.c  enc.tree.c  enc.vp8l.c  enc.webpenc.c
src/mux/: mux.anim_encode.c  mux.muxedit.c  mux.muxinternal.c  mux.muxread.c
src/utils/: bit_reader.h  endian_inl.h  utils.bit_reader.c  utils.bit_writer.c  utils.color_cache.c  utils.filters.c  utils.huffman.c  utils.huffman_encode.c  utils.quant_levels.c  utils.quant_levels_dec.c  utils.random.c  utils.rescaler.c  utils.thread.c  utils.utils.c
